--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="/img/weather.png">
+    <script type="module" src="js/js.cookie-2.2.1.min.js"></script>
     <script src="js/index.js" defer></script>
 </head>
 <body>
