--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,9 @@
 <body>
     <div class="content">
         {{>header}}
-        <img src="img/robot.png" alt="" class="about_img">
+        <p>Powered by Mapbox API for geocoding and Weatherstack API for weather info.</p>
+        <img src="img/weatherstack_logo.png" alt="" id="weatherstack_logo">
+        <img src="img/mapbox_logo.png" alt="" id="mabpox_logo">
     </div>
 
     {{>footer}}
