--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,9 @@
 <body>
     <div class="content">
         {{>header}}
+        <p>Made on Express.js, using hbs.js as a view engine.</p>
         <p>Powered by Mapbox API for geocoding and Weatherstack API for weather info.</p>
+        <p>Source code: <a href="https://github.com/AlexRazor1337/weather-app">github</a></p>
         <img src="img/weatherstack_logo.png" alt="" id="weatherstack_logo">
         <img src="img/mapbox_logo.png" alt="" id="mabpox_logo">
     </div>
